Add About me section and Javascript feature

--- a/index.html
+++ b/index.html
@@ -8,86 +8,34 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>Angga Bayu Haryanto</h1>
+        <p>Passionate Game Developer and Programmer</p>
     </header>
 
-    <section id="home">
-        <h1>Welcome to My Portfolio</h1>
-        <p>Hi, I'm Angga Bayu Haryanto, a passionate game developer and programmer.</p>
-        <img src="https://drive.google.com/uc?id=1svAXKlKPxpRT3oPQj7BDrhWkpZUis43W" alt="Angga Bayu Haryanto">
-    </section>
+    <nav>
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>[Your detailed bio]</p>
-    </section>
-
-    <section id="portfolio">
-        <h2>My Projects</h2>
-        <div class="project">
-            <h3>Project Title</h3>
-            <p>Project description.</p>
-            <a href="link-to-project">View Project</a>
-        </div>
-    </section>
-
-    <section id="skills">
-        <h2>My Skills</h2>
-        <div class="skill">
-            <h3>JavaScript</h3>
-            <div class="skill-bar">
-                <div class="skill-level" style="width: 90%;"></div>
-            </div>
-        </div>
-        <div class="skill">
-            <h3>Python</h3>
-            <div class="skill-bar">
-                <div class="skill-level" style="width: 80%;"></div>
-            </div>
-        </div>
-        <div class="skill">
-            <h3>Game Development</h3>
-            <div class="skill-bar">
-                <div class="skill-level" style="width: 85%;"></div>
-            </div>
-        </div>
-        <!-- Add more skills as needed -->
-    </section>
-
-    <section id="blog">
-        <h2>Blog</h2>
-        <p>Coming soon...</p>
-    </section>
-
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <form>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-            <button type="submit">Send</button>
-        </form>
-    </section>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <img src="https://drive.google.com/uc?export=view&id=1svAXKlKPxpRT3oPQj7BDrhWkpZUis43W" alt="Angga Bayu Haryanto">
+            <p>I am an indie game developer and programmer with a strong passion for learning new things and achieving great feats to enhance my experiences.</p>
+            <p>Working at Telkom Indonesia has greatly encouraged me to collaborate with many talented individuals who have great minds and innovative concepts. Over the years, I have honed my skills in Excel, Database Management, Python, Web Development, and Game Development as a way to further my self-development.</p>
+            <p>I believe we are living in an era of convenience, where almost everything can be managed with just a tap—a true digital era. My goal in life is to create lasting legacies that can be beneficial to many and used by others.</p>
+            <p>Beyond my professional work, I enjoy reading and gaming in my spare time. Occasionally, I travel to relaxing and calming places for peace of mind. These activities enrich my creativity and provide new insights for many fresh ideas.</p>
+            <p>I am always ready to collaborate and share ideas on various projects. Feel free to connect with me on social media below—hopefully, we can become good friends!</p>
+        </section>
+        <!-- Other sections will go here -->
+    </main>
 
     <footer>
-        <p>© 2024 Angga Bayu Haryanto. All rights reserved.</p>
-        <ul>
-            <li><a href="https://github.com/anggabayuharyanto2024">GitHub</a></li>
-            <li><a href="https://twitter.com/yourusername">Twitter</a></li>
-            <!-- Add more social links as needed -->
-        </ul>
+        <p>&copy; 2024 Angga Bayu Haryanto</p>
     </footer>
 
     <script src="scripts.js"></script>
