--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <img src="https://drive.google.com/uc?export=view&id=1svAXKlKPxpRT3oPQj7BDrhWkpZUis43W" alt="Angga Bayu Haryanto">
+            <img src="https://lh3.googleusercontent.com/d/1svAXKlKPxpRT3oPQj7BDrhWkpZUis43W=s220" alt="Angga Bayu Haryanto">
             <p>I am an indie game developer and programmer with a strong passion for learning new things and achieving great feats to enhance my experiences.</p>
             <p>Working at Telkom Indonesia has greatly encouraged me to collaborate with many talented individuals who have great minds and innovative concepts. Over the years, I have honed my skills in Excel, Database Management, Python, Web Development, and Game Development as a way to further my self-development.</p>
             <p>I believe we are living in an era of convenience, where almost everything can be managed with just a tap—a true digital era. My goal in life is to create lasting legacies that can be beneficial to many and used by others.</p>
