Enhancing web visual using Bootstrap

--- a/index.html
+++ b/index.html
@@ -4,27 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angga Bayu Haryanto - Portfolio</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Angga Bayu Haryanto</h1>
-        <p>Passionate Game Developer and Programmer</p>
+    <header class="bg-dark text-white text-center py-5">
+        <div class="container">
+            <h1 class="display-4">Angga Bayu Haryanto</h1>
+            <p class="lead">Passionate Game Developer and Programmer</p>
+        </div>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Portfolio</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <img src="https://lh3.googleusercontent.com/d/1svAXKlKPxpRT3oPQj7BDrhWkpZUis43W=s220" alt="Angga Bayu Haryanto">
+    <main class="container my-5">
+        <section id="about" class="text-center">
+            <h2 class="mb-4">About Me</h2>
+            <img src="https://lh3.googleusercontent.com/d/1svAXKlKPxpRT3oPQj7BDrhWkpZUis43W=s220" class="rounded-circle mb-4" alt="Angga Bayu Haryanto" style="width: 150px;">
             <p>I am an indie game developer and programmer with a strong passion for learning new things and achieving great feats to enhance my experiences.</p>
             <p>Working at Telkom Indonesia has greatly encouraged me to collaborate with many talented individuals who have great minds and innovative concepts. Over the years, I have honed my skills in Excel, Database Management, Python, Web Development, and Game Development as a way to further my self-development.</p>
             <p>I believe we are living in an era of convenience, where almost everything can be managed with just a tap—a true digital era. My goal in life is to create lasting legacies that can be beneficial to many and used by others.</p>
@@ -34,10 +53,13 @@
         <!-- Other sections will go here -->
     </main>
 
-    <footer>
+    <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2024 Angga Bayu Haryanto</p>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="scripts.js"></script>
 </body>
 </html>
