Update layout with thinner sidebar, divider, and updated About Me section

--- a/index.html
+++ b/index.html
@@ -42,22 +42,27 @@
 
     <main class="container my-5">
         <div class="row">
-            <aside class="col-md-4 mb-4">
+            <aside class="col-md-3 mb-4">
                 <section id="about" class="text-center mb-5">
                     <h2 class="mb-4">About Me</h2>
                     <img src="https://lh3.googleusercontent.com/d/1svAXKlKPxpRT3oPQj7BDrhWkpZUis43W=s220" class="rounded-circle mb-4" alt="Angga Bayu Haryanto">
-                    <p>I am an indie game developer and programmer with a strong passion for learning new things and achieving great feats to enhance my experiences.</p>
-                    <p>Working at Telkom Indonesia has greatly encouraged me to collaborate with many talented individuals who have great minds and innovative concepts. Over the years, I have honed my skills in Excel, Database Management, Python, Web Development, and Game Development as a way to further my self-development.</p>
-                    <p>I believe we are living in an era of convenience, where almost everything can be managed with just a tap—a true digital era. My goal in life is to create lasting legacies that can be beneficial to many and used by others.</p>
-                    <p>Beyond my professional work, I enjoy reading and gaming in my spare time. Occasionally, I travel to relaxing and calming places for peace of mind. These activities enrich my creativity and provide new insights for many fresh ideas.</p>
-                    <p>I am always ready to collaborate and share ideas on various projects. Feel free to connect with me on social media below—hopefully, we can become good friends!</p>
+                    <p>An Indie game developer and programmer with a strong passion for learning new things and achieving great feats to enhance my experiences. Currently working at Telkom Indonesia and has been learning some tools for work performance such as Excel, SQL, Python, Web Development, and Game Development as a way to further my self-development journey.</p>
                 </section>
             </aside>
+            <div class="col-md-1">
+                <div class="divider"></div>
+            </div>
             <div class="col-md-8">
                 <!-- Other sections will go here -->
             </div>
         </div>
     </main>
+
+    <footer class="bg-dark text-white text-center py-3">
+        <div class="container">
+            <p class="mb-0">&copy; 2024 Angga Bayu Haryanto. All rights reserved.</p>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
