--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
     <main class="container my-5">
         <div class="row">
-            <aside class="col-md-3 mb-4">
-                <section id="about" class="text-center mb-5">
+            <aside class="col-md-4 mb-4">
+                <section id="about" class="card p-4">
                     <h2 class="mb-4">About Me</h2>
                     <img src="https://lh3.googleusercontent.com/d/1svAXKlKPxpRT3oPQj7BDrhWkpZUis43W=s220" class="rounded-circle mb-4" alt="Angga Bayu Haryanto">
                     <p>An Indie game developer and programmer with a strong passion for learning new things and achieving great feats to enhance my experiences. Currently working at Telkom Indonesia and has been learning some tools for work performance such as Excel, SQL, Python, Web Development, and Game Development as a way to further my self-development journey.</p>
@@ -52,7 +52,7 @@
             <div class="col-md-1">
                 <div class="divider"></div>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-7">
                 <!-- Other sections will go here -->
             </div>
         </div>
