Adjust header and left side margins for better layout

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="bg-dark text-white text-center py-5">
+    <header class="bg-dark text-white text-center py-3">
         <div class="container">
-            <h1 class="display-4">Angga Bayu Haryanto</h1>
-            <p class="lead">Passionate Game Developer and Programmer</p>
+            <h1 class="display-5 mb-0">Angga Bayu Haryanto</h1>
+            <p class="lead mb-0">Passionate Game Developer and Programmer</p>
         </div>
     </header>
 
@@ -49,10 +49,7 @@
                     <p>An Indie game developer and programmer with a strong passion for learning new things and achieving great feats to enhance my experiences. Currently working at Telkom Indonesia and has been learning some tools for work performance such as Excel, SQL, Python, Web Development, and Game Development as a way to further my self-development journey.</p>
                 </section>
             </aside>
-            <div class="col-md-1">
-                <div class="divider"></div>
-            </div>
-            <div class="col-md-7">
+            <div class="col-md-8">
                 <!-- Other sections will go here -->
             </div>
         </div>
